# vibe-compiler

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp
src/ErrorReporter/: ErrorReporter.cpp  ErrorReporter.hpp
src/ErrorsAndDebug/: DebugPrint.cpp  DebugPrint.hpp  ErrorReporter.cpp  ErrorReporter.hpp
src/FileReader/: FileReader.cpp  FileReader.hpp
src/InterpreterDriver/: InterpreterDriver.cpp  InterpreterDriver.hpp
src/Scanner/: Scanner.cpp  Scanner.hpp
src/Token/: Token.cpp  Token.hpp
src/Types/: Token.cpp
